# simple-git-diff

./: Cargo.toml  README.md
src/: main.rs  state.rs
